Layout bug test 4.

--- a/events-test.css
+++ b/events-test.css
@@ -7,4 +7,13 @@
   border: 5px solid red;
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+.vp {
+  width: 100%;
+  height: 100%;
+  border: 5px solid green;
+  scroll-snap-align: start;
 }
